# RomanEmpireReminder

./: .gitignore  Config.json  LICENSE  Main.py  README.md  Requirements.txt  __init__.py  __main__.py  flake.nix  pyproject.toml
notification/: __init__.py
roman-empire-reminder/: Config.json  __init__.py  __main__.py  notification.py
